# cv_qa

./: .gitignore  Dockerfile  README.md  docker-compose.yml  project_structure.text  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: main_cbdltcvqaapp.yml  main_webappcvqa.yml
cv_qa_website/: config.json  manage.py
cv_qa_website/cv_qa_website/: asgi.py  settings.py  urls.py  wsgi.py
cv_qa_website/data/raw/: context.csv
cv_qa_website/qa/: chatbot.py  models.py  ratelimit_middleware.py  urls.py  views.py
cv_qa_website/qa/migrations/: 0001_initial.py  0002_message_answer.py
cv_qa_website/qa/static/css/: style.css
cv_qa_website/qa/templates/: index.html  terms_and_policies.html
cv_qa_website/qa/utils/: bot_utils.py  callbacks.py
cv_qa_website/staticfiles/: staticfiles.json
cv_qa_website/staticfiles/css/: style.0aef166cfa32.css  style.1b3aad1258ce.css  style.2a312eb367e2.css  style.427c34a36373.css  style.4b0924991d82.css  style.775287467bbb.css  style.7e503b026040.css  style.8f52228a6811.css  style.97a78d654a48.css  style.c6a1e9e302ef.css  style.d1d87a812056.css  style.dd29162a7056.css  style.ef2c28f2b13d.css
cv_qa_website/staticfiles/js/: script.5bc43fa9ae6f.js
