[tool.poetry]
name = "cv_qa_website"
version = "0.1.0"
description = ""
authors = ["Charles Boy-de-la-tour <charles.boydelatour@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10 <3.13"
typer = { extras = ["all"], version = "^0.7.0" }
python-json-logger = "^2.0.4"
poetry = "^1.3.1"
openai = "^0.28.0"
langchain = "^0.0.314"
chromadb = "^0.4.10"
tiktoken = "^0.5.1"
gunicorn = "^21.2.0"
six = "^1.16.0"
django = "^4.2.6"
pandas = "^2.1.1"
pymongo = "^4.5.0"
azure-search-documents = "11.4.0b8"
azure-identity = "^1.14.1"
django-ratelimit = "^4.1.0"
django-redis = "^5.4.0"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
whitenoise = "^6.6.0"
django-redis-sessions = "^0.6.2"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.11"
pytest = "^7.2.0"
pytest-sugar = "^0.9.6"
pytest-mock = "^3.10.0"
isort = "^5.11.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"